[package]
name = "img-to-ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
terminal-clipboard = "0.3.1"
image = "0.24.2"
clap = { version = "3.2.6", features = ["derive"] }
